fix get all orders issue
